@@ -1,3 +1,7 @@
+2008-11-01  Gabor Csardi  <csardi@szaffi>
+
+	* src/bipartite.c (igraph_incidence) : added
+
 2008-10-31  Gabor Csardi  <csardi@szaffi>
 
 	* src/bipartite.c (igraph_create_bipartite) : added
